cluster/redcloud/apps/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.mesh.rigsb.net
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`uptime-kuma.mesh.rigsb.net`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: limit-buffering
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls:
    secretName: uptime-kuma-mesh-rigsb-net-tls
